// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="MediaBlock__Block-k78dm4-0 jXgttR"
  id={null}
  onClick={null}
>
  <section
    className="MediaBlock__Media-k78dm4-1 hczdui"
  >
    <img
      alt="This is alt text for this image"
      className="Image__ImageWrapper-sc-18abvff-0 driND"
      onClick={null}
      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
      title="This is alt text for this image"
      width={null}
    />
  </section>
  <section
    className="MediaBlock__Body-k78dm4-2 koHCVu"
  >
    <h5
      className="Typography__TitleText-sc-19auepv-2 bKCMpV"
      fontSize="1.15em"
      fontWeight={600}
      letterSpacing="0px"
    >
      Media Block
    </h5>
    <p
      className="Typography__Paragraph-sc-19auepv-3 NmRuW"
      fontSize="0.876em"
      fontWeight={300}
      id={null}
      letterSpacing="0px"
    >
      In life you need colors. We'll put a happy little sky in here. Now we can begin working on lots of happy little things. In this world, everything can be happy. 
    </p>
  </section>
</div>
`;

exports[` 2`] = `
<div
  className="MediaBlock__Block-k78dm4-0 jXgttR"
  id={null}
  onClick={null}
>
  <section
    className="MediaBlock__Media-k78dm4-1 hczdui"
  >
    <img
      alt="This is alt text for this image"
      className="Image__ImageWrapper-sc-18abvff-0 driND"
      onClick={null}
      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
      title="This is alt text for this image"
      width={null}
    />
  </section>
  <section
    className="MediaBlock__Body-k78dm4-2 koHCVu"
  >
    <h5
      className="Typography__TitleText-sc-19auepv-2 bKCMpV"
      fontSize="1.15em"
      fontWeight={600}
      letterSpacing="0px"
    >
      Media Block
    </h5>
    <p
      className="Typography__Paragraph-sc-19auepv-3 NmRuW"
      fontSize="0.876em"
      fontWeight={300}
      id={null}
      letterSpacing="0px"
    >
      In life you need colors. We'll put a happy little sky in here. Now we can begin working on lots of happy little things. In this world, everything can be happy. 
    </p>
  </section>
</div>
`;

exports[` 3`] = `
<div
  className="MediaBlock__Block-k78dm4-0 jXgttR"
  id={null}
  onClick={null}
>
  <section
    className="MediaBlock__Media-k78dm4-1 hczdui"
  >
    <img
      alt="This is alt text for this image"
      className="Image__ImageWrapper-sc-18abvff-0 driND"
      onClick={null}
      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
      title="This is alt text for this image"
      width={null}
    />
  </section>
  <section
    className="MediaBlock__Body-k78dm4-2 koHCVu"
  >
    <h5
      className="Typography__TitleText-sc-19auepv-2 bKCMpV"
      fontSize="1.15em"
      fontWeight={600}
      letterSpacing="0px"
    >
      Media Block
    </h5>
    <p
      className="Typography__Paragraph-sc-19auepv-3 NmRuW"
      fontSize="0.876em"
      fontWeight={300}
      id={null}
      letterSpacing="0px"
    >
      In life you need colors. We'll put a happy little sky in here. Now we can begin working on lots of happy little things. In this world, everything can be happy. 
    </p>
    <div
      className="MediaBlock__Block-k78dm4-0 jXgttR"
      id={null}
      onClick={null}
    >
      <section
        className="MediaBlock__Media-k78dm4-1 hczdui"
      >
        <img
          alt="This is alt text for this image"
          className="Image__ImageWrapper-sc-18abvff-0 driND"
          onClick={null}
          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
          title="This is alt text for this image"
          width={null}
        />
      </section>
      <section
        className="MediaBlock__Body-k78dm4-2 koHCVu"
      >
        <h5
          className="Typography__TitleText-sc-19auepv-2 bKCMpV"
          fontSize="1.15em"
          fontWeight={600}
          letterSpacing="0px"
        >
          Media Block
        </h5>
        <p
          className="Typography__Paragraph-sc-19auepv-3 NmRuW"
          fontSize="0.876em"
          fontWeight={300}
          id={null}
          letterSpacing="0px"
        >
          In life you need colors. We'll put a happy little sky in here. Now we can begin working on lots of happy little things. In this world, everything can be happy. 
        </p>
        <div
          className="MediaBlock__Block-k78dm4-0 jXgttR"
          id={null}
          onClick={null}
        >
          <section
            className="MediaBlock__Media-k78dm4-1 hczdui"
          >
            <img
              alt="This is alt text for this image"
              className="Image__ImageWrapper-sc-18abvff-0 driND"
              onClick={null}
              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
              title="This is alt text for this image"
              width={null}
            />
          </section>
          <section
            className="MediaBlock__Body-k78dm4-2 koHCVu"
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 bKCMpV"
              fontSize="1.15em"
              fontWeight={600}
              letterSpacing="0px"
            >
              Media Block
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 NmRuW"
              fontSize="0.876em"
              fontWeight={300}
              id={null}
              letterSpacing="0px"
            >
              In life you need colors. We'll put a happy little sky in here. Now we can begin working on lots of happy little things. In this world, everything can be happy. 
            </p>
          </section>
        </div>
        <div
          className="MediaBlock__Block-k78dm4-0 jXgttR"
          id={null}
          onClick={null}
        >
          <section
            className="MediaBlock__Media-k78dm4-1 hczdui"
          >
            <img
              alt="This is alt text for this image"
              className="Image__ImageWrapper-sc-18abvff-0 driND"
              onClick={null}
              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
              title="This is alt text for this image"
              width={null}
            />
          </section>
          <section
            className="MediaBlock__Body-k78dm4-2 koHCVu"
          >
            <h5
              className="Typography__TitleText-sc-19auepv-2 bKCMpV"
              fontSize="1.15em"
              fontWeight={600}
              letterSpacing="0px"
            >
              Media Block
            </h5>
            <p
              className="Typography__Paragraph-sc-19auepv-3 NmRuW"
              fontSize="0.876em"
              fontWeight={300}
              id={null}
              letterSpacing="0px"
            >
              In life you need colors. We'll put a happy little sky in here. Now we can begin working on lots of happy little things. In this world, everything can be happy. 
            </p>
          </section>
        </div>
      </section>
    </div>
    <div
      className="MediaBlock__Block-k78dm4-0 jXgttR"
      id={null}
      onClick={null}
    >
      <section
        className="MediaBlock__Media-k78dm4-1 hczdui"
      >
        <img
          alt="This is alt text for this image"
          className="Image__ImageWrapper-sc-18abvff-0 driND"
          onClick={null}
          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
          title="This is alt text for this image"
          width={null}
        />
      </section>
      <section
        className="MediaBlock__Body-k78dm4-2 koHCVu"
      >
        <h5
          className="Typography__TitleText-sc-19auepv-2 bKCMpV"
          fontSize="1.15em"
          fontWeight={600}
          letterSpacing="0px"
        >
          Media Block
        </h5>
        <p
          className="Typography__Paragraph-sc-19auepv-3 NmRuW"
          fontSize="0.876em"
          fontWeight={300}
          id={null}
          letterSpacing="0px"
        >
          In life you need colors. We'll put a happy little sky in here. Now we can begin working on lots of happy little things. In this world, everything can be happy. 
        </p>
      </section>
    </div>
  </section>
</div>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 gGefDa"
  id={null}
  rows={null}
>
  <div
    className="MediaBlock__Block-k78dm4-0 jXgttR"
    id={null}
    onClick={null}
  >
    <section
      className="MediaBlock__Media-k78dm4-1 hczdui"
    >
      <img
        alt="This is alt text for this image"
        className="Image__ImageWrapper-sc-18abvff-0 driND"
        onClick={null}
        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
        title="This is alt text for this image"
        width={null}
      />
    </section>
    <section
      className="MediaBlock__Body-k78dm4-2 koHCVu"
    >
      <h5
        className="Typography__TitleText-sc-19auepv-2 bKCMpV"
        fontSize="1.15em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Media Block
      </h5>
      <p
        className="Typography__Paragraph-sc-19auepv-3 NmRuW"
        fontSize="0.876em"
        fontWeight={300}
        id={null}
        letterSpacing="0px"
      >
        In life you need colors. We'll put a happy little sky in here. Now we can begin working on lots of happy little things. In this world, everything can be happy.
      </p>
    </section>
  </div>
  <div
    className="MediaBlock__Block-k78dm4-0 leeaQp"
    id={null}
    onClick={null}
  >
    <section
      className="MediaBlock__Media-k78dm4-1 gWkqHj"
    >
      <img
        alt="This is alt text for this image"
        className="Image__ImageWrapper-sc-18abvff-0 driND"
        onClick={null}
        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
        title="This is alt text for this image"
        width={null}
      />
    </section>
    <section
      className="MediaBlock__Body-k78dm4-2 dVIBIi"
    >
      <h5
        className="Typography__TitleText-sc-19auepv-2 bKCMpV"
        fontSize="1.15em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Media Block (isReversed)
      </h5>
      <p
        className="Typography__Paragraph-sc-19auepv-3 NmRuW"
        fontSize="0.876em"
        fontWeight={300}
        id={null}
        letterSpacing="0px"
      >
        In life you need colors. We'll put a happy little sky in here. Now we can begin working on lots of happy little things. In this world, everything can be happy.
      </p>
    </section>
  </div>
  <div
    className="MediaBlock__Block-k78dm4-0 hUlOgy"
    id={null}
    onClick={null}
  >
    <section
      className="MediaBlock__Media-k78dm4-1 hczdui"
    >
      <img
        alt="This is alt text for this image"
        className="Image__ImageWrapper-sc-18abvff-0 driND"
        onClick={null}
        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
        title="This is alt text for this image"
        width={null}
      />
    </section>
    <section
      className="MediaBlock__Body-k78dm4-2 iaXsTF"
    >
      <h5
        className="Typography__TitleText-sc-19auepv-2 bKCMpV"
        fontSize="1.15em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Media Block - Vertical
      </h5>
      <p
        className="Typography__Paragraph-sc-19auepv-3 NmRuW"
        fontSize="0.876em"
        fontWeight={300}
        id={null}
        letterSpacing="0px"
      >
        In life you need colors. We'll put a happy little sky in here. Now we can begin working on lots of happy little things. In this world, everything can be happy.
      </p>
    </section>
  </div>
  <div
    className="MediaBlock__Block-k78dm4-0 cSHxjm"
    id={null}
    onClick={null}
  >
    <section
      className="MediaBlock__Media-k78dm4-1 hczdui"
    >
      <img
        alt="This is alt text for this image"
        className="Image__ImageWrapper-sc-18abvff-0 driND"
        onClick={null}
        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
        title="This is alt text for this image"
        width={null}
      />
    </section>
    <section
      className="MediaBlock__Body-k78dm4-2 hPQEFx"
    >
      <h5
        className="Typography__TitleText-sc-19auepv-2 bKCMpV"
        fontSize="1.15em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Media Block - Vertical (isReversed)
      </h5>
      <p
        className="Typography__Paragraph-sc-19auepv-3 NmRuW"
        fontSize="0.876em"
        fontWeight={300}
        id={null}
        letterSpacing="0px"
      >
        In life you need colors. We'll put a happy little sky in here. Now we can begin working on lots of happy little things. In this world, everything can be happy.
      </p>
    </section>
  </div>
  <div
    className="MediaBlock__Block-k78dm4-0 bhJHKl"
    id={null}
    onClick={null}
  >
    <section
      className="MediaBlock__Media-k78dm4-1 hczdui"
    >
      <img
        alt="This is alt text for this image"
        className="Image__ImageWrapper-sc-18abvff-0 driND"
        onClick={null}
        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
        title="This is alt text for this image"
        width={null}
      />
    </section>
    <section
      className="MediaBlock__Body-k78dm4-2 cdLTVU"
    >
      <h5
        className="Typography__TitleText-sc-19auepv-2 bKCMpV"
        fontSize="1.15em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Media Block - Inline
      </h5>
      <p
        className="Typography__Paragraph-sc-19auepv-3 NmRuW"
        fontSize="0.876em"
        fontWeight={300}
        id={null}
        letterSpacing="0px"
      >
        In life you need colors. We'll put a happy little sky in here. Now we can begin working on lots of happy little things. In this world, everything can be happy.
      </p>
    </section>
  </div>
  <div
    className="MediaBlock__Block-k78dm4-0 htiHXN"
    id={null}
    onClick={null}
  >
    <section
      className="MediaBlock__Media-k78dm4-1 hczdui"
    >
      <img
        alt="This is alt text for this image"
        className="Image__ImageWrapper-sc-18abvff-0 driND"
        onClick={null}
        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKFattKrNRvWlq7W5k_19wjiYpmqVUFgw4vDIrgWL5l2BQuRAE"
        title="This is alt text for this image"
        width={null}
      />
    </section>
    <section
      className="MediaBlock__Body-k78dm4-2 hePDVU"
    >
      <h5
        className="Typography__TitleText-sc-19auepv-2 bKCMpV"
        fontSize="1.15em"
        fontWeight={600}
        letterSpacing="0px"
      >
        Media Block - Inline (isReversed)
      </h5>
      <p
        className="Typography__Paragraph-sc-19auepv-3 NmRuW"
        fontSize="0.876em"
        fontWeight={300}
        id={null}
        letterSpacing="0px"
      >
        In life you need colors. We'll put a happy little sky in here. Now we can begin working on lots of happy little things. In this world, everything can be happy.
      </p>
    </section>
  </div>
</section>
`;
